# djangodav

./: .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/workflows/: ruff.yml  test.yml
djangodav/: __init__.py  acls.py  responses.py  utils.py
djangodav/auth/: rest.py  tasty.py  tests.py
djangodav/base/: locks.py  resources.py
djangodav/base/tests/: resources.py  tests.py
djangodav/db/: resources.py
djangodav/fs/: resources.py  tests.py
djangodav/templates/djangodav/: index.html
djangodav/views/: __init__.py  tests.py  views.py
docs/: howto.rst
